# python-proj-import-run-example

./: .gitignore  README.md  pyproject.toml
mld/: main.py  t2.py
mld/db/: xtdb.py
mld/refs/: compl.py  t1.py
mld/tmp/: imports.py  t3.py
proj/: top.py
proj/domain/: d1.py  d2.py
tests/integration/: any_test.py
