[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["kur <rhdnfka94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"

[tool.pytest.ini_options]
pythonpath = "proj"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
